--- a/MainPage.xaml
+++ b/MainPage.xaml
@@ -1,7 +1,8 @@
-<ContentPage
+﻿<ContentPage
     x:Class="EmailAuth.MainPage"
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+    xmlns:Control="clr-namespace:EmailAuth.Control"
     BackgroundColor="{DynamicResource SecondaryColor}"
     NavigationPage.HasNavigationBar="False">
 
@@ -36,6 +37,7 @@
                     RowSpacing="20"
                     VerticalOptions="FillAndExpand">
                     <Grid.RowDefinitions>
+                        <RowDefinition Height="Auto" />
                         <RowDefinition Height="Auto" />
                         <RowDefinition Height="Auto" />
                         <RowDefinition Height="Auto" />
@@ -88,45 +90,49 @@
                         Text="Register using Email" />
 
                     <Label
-                        Grid.Row="5"
+                        Grid.Row="6"
                         HorizontalOptions="CenterAndExpand"
                         Text="or signin with" />
                     <StackLayout
-                        Grid.Row="6"
+                        Grid.Row="7"
                         HorizontalOptions="CenterAndExpand"
                         Orientation="Horizontal"
                         Spacing="40">
-                        <Image
+                        <ImageButton
                             Aspect="AspectFit"
                             HeightRequest="30"
+                            Clicked="Facebook_Clicked"
                             Source="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSo626DNKJxdHM-VNRD0m7x_8Jim-r9kRalJQ"
                             WidthRequest="30" />
-                        <Image
+                        <ImageButton
                             Aspect="AspectFit"
                             HeightRequest="30"
                             Source="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRnLfAn36-LTYNHjioWgvu-0KUTIDDrW5lX_g"
                             WidthRequest="30" />
-                        <Image
+                        <ImageButton
                             Aspect="AspectFit"
                             HeightRequest="30"
+                            Clicked="Google_Clicked"
                             Source="https://www.freepnglogos.com/uploads/google-logo-png/google-logo-icon-png-transparent-background-osteopathy-16.png"
                             WidthRequest="30" />
-                        <Image
+                        <ImageButton
                             Aspect="AspectFit"
                             HeightRequest="30"
                             Source="https://cdn-icons-png.flaticon.com/512/174/174857.png"
                             WidthRequest="30" />
                     </StackLayout>
+                    <Control:AppleSignInButton
+                        Grid.Row="8"
+                        HorizontalOptions="FillAndExpand"
+                        VerticalOptions="Center"
+                        SignIn="AppleSignInButton_SignIn"
+                        ButtonStyle="Black" />
+                    <!--Command="{Binding AppleSignInButton}"-->
                     <Label
-                        Grid.Row="7"
+                        Grid.Row="9"
                         FontAttributes="Bold"
                         HorizontalOptions="CenterAndExpand"
                         Text="Forget Password" />
-                    <Label
-                        Grid.Row="8"
-                        Margin="0,-10,0,0"
-                        HorizontalOptions="CenterAndExpand"
-                        Text="Don't have an account? Sign up here" />
                 </Grid>
             </Frame>
         </Grid>
