--- a/RegisterPage.xaml
+++ b/RegisterPage.xaml
@@ -39,6 +39,7 @@
             <RowDefinition Height="Auto" />
             <RowDefinition Height="Auto" />
             <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto" />
         </Grid.RowDefinitions>
         <Label
             Grid.Row="0"
@@ -51,8 +52,15 @@
             Grid.Row="1"
             Margin="0,-15,0,0"
             HorizontalOptions="CenterAndExpand"
-            Text="Register With Email"
+            Text="Register with Email"
             TextColor="#1C375C" />
+        <Entry
+            Grid.Row="2"
+            Margin="0,20,0,0"
+            HorizontalOptions="FillAndExpand"
+            Placeholder="Name"
+            Text="{Binding Name}"
+            VerticalOptions="FillAndExpand" />
         <Entry
             Grid.Row="2"
             Margin="0,20,0,0"
